--- a/src/datasets/MD_SHIP/pbt_aspects.yml
+++ b/src/datasets/MD_SHIP/pbt_aspects.yml
@@ -4,7 +4,7 @@ schema:
   fields:
   - name: SRC_SYS_CD
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
@@ -65,826 +65,28 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: SHIP_CNTNR_NUM
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SHIP_STS_CD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SHIP_TYPE_CD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TRSPN_PLNG_PT
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: NM_PRSN_RESP_CREAT_OBJ
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CRT_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: NM_PRSN_CHG_OBJ
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CHG_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: LEG_DTRMN
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SHIP_CMPLT_TYPE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: PRCSG_CNTL
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SRVC_LVL
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SHIPPING_TYPE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SHIPPING_TYPE_PRLM_LEG
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SHIPPING_TYPE_SUBSQ_LEG
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: LEG_IN
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SHIPPING_COND
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SHIP_RTE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: EXTRNL_ID_1
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: EXTRNL_ID_2
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: DESC_SHIP
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: STS_TRSPN_PLNG
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: END_PLNG_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: STS_OF_CHKIN
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: PLAN_CHKIN_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CHKIN_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: STS_STRT_LD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: PLAN_LD_STRT_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CUR_STRT_LD_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: STS_FOR_END_OF_LD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: PLAN_END_LD_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ACTL_END_LD_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: STS_SHIP_CMPLT
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: STS_FOR_STRT_OF_SHIP
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: PLAN_TRNSP_STRT_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ACTUAL_TRNSP_STRT_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: STS_END_SHIP
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: PLAN_TRNSP_END_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ACTL_SHIP_END_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: NUM_FRWD_AGN
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ORDR_NUM
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SHIP_CONT_HNDG_UNIT
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: UNIT_WT_TRSPN_PLNG
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: VOL_UNIT_TRSPN_PLNG
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: DSTC
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: DSTC_UNIT_MEAS
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TRAVL_TIME_ONLY_BTWN_TWO_LOC
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TOT_TRAVL_TIME_BTWN_TWO_LOC_INCL_BRK
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: UNIT_MEAS_TRAVL_TM
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: UPDT_GRP_STATS_UPDT
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: STS_SHIP_COST_CALC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: OVRL_STS_CALC_SHIP_COST_SHIP
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: STS_SHIP_COST_SETLM
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TOT_STS_SHIP_COST_SETLM_SHIP
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: LEG_DTRMN_CMPLT
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: HNDG_UNIT_DATA_REF_SHIP_COST_DOC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: PRC_PCDR_SHIP_HDR
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SPL_PRCSG_IN
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SHIP_COST_RLVNT
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: PLAN_TOT_TIME_TRSPN
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: PLAN_DUR_TRSPN
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ACTL_TOT_TIME_SHIP
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ACTL_TIME_NEED_TRSPN
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: RTE_COPY_FROM_DELV
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: GLOBL_UNIQ_ID
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TIME_SGMNT_EXISTS
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TIME_SGMNT_EV_GRP_SHIP_HDR
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SUP_1
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SUP_2
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SUP_3
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SUP_4
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ADDID_TEXT_1
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ADDID_TEXT_2
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ADDID_TEXT_3
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ADDID_TEXT_4
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: DNGRS_GOODS_MGMT_PRFL_SD_DOC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: BLK_IN_DNGRS_GOODS
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SLCT_DNGRS_GOODS_MSTR_DATA_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: IN_DOC_CONT_DNGRS_GOODS
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: PLAN_WAIT_TIME_SHIP
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CUR_WAIT_TIME_SHIP
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: RTE_SCHED
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TENDER_STS
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ACC_COND_REJ_RSN
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TENDER_TEXT
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MAX_PRC_SHIP
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CRNCY_MAX_PRC
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ACTL_SHIP_COST_SHIP
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CRNCY_ACTL_SHIP_COST
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: FRWD_AGN_ACPT_SHIP
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: NM_CARR_ACPT_SHIP
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: FRWD_AGN_TCKG_ID
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: QTA_EXP_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: EARLY_PCKUP_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: LTST_PCKUP_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: EARLY_DELV_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: LTST_DELV_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: LGTH_LD_PLTF
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: UNIT_MEAS_LD_LGTH
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: IN_HUS_RLVNT_DELV_ITM_GNR
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ALLW_TOT_WT_SHIP
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: DSTN_STS
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SHIP_DSTN_ORIG_SYS
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ID_NUM_CONT_MOVE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SEQ_TRNSP_CNCT_TRFC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: EXTRNL_FRGHT_ORDR_ID
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: KEY_NM_BUSN_SYS
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: DRVR_1
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: DRVR_2
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: VEH
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TRLR
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: LD_SEQ_NUM_TOUR
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: STS_VEH_SPACE_OPTZ
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: DAI_ETL_ID
     type: integer
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DAI_CRT_DTTM
     type: timestamp
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DAI_UPDT_DTTM
     type: timestamp
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: _l0_upt_
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _l1_upt_
     type: timestamp
     nullable: true
     metadata:
@@ -905,9 +107,16 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: _l1_upt_
+    type: timestamp
+    nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: _deleted_
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
