--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -507,12 +507,12 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-10 19:20:53'
-    modifiedAt: '2023-04-10 20:01:16'
+    modifiedAt: '2023-04-12 14:52:25'
     datasets:
       inputs:
-      - datasets/MD_SHIP
-      outputs:
-      - datasets/MD_SHIP
+      - datasets/DS_JDE_01_F4211
+      - datasets/DS_JDE_01_F43121
+      outputs: []
     subgraphs: []
     dependencies: {}
 datasets:
@@ -1241,7 +1241,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-10 19:31:37'
+    modifiedAt: '2023-04-12 14:10:35'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -3561,6 +3561,36 @@ datasets:
         author: hgermi1@its.jnj.com
         createdAt: '2023-04-04 03:44:13'
         modifiedAt: '2023-04-04 03:44:13'
+  datasets/DS_JDE_01_F4211:
+    name: DS_JDE_01_F4211
+    description: ''
+    author: hgermi1@its.jnj.com
+    createdAt: '2023-04-12 12:49:35'
+    modifiedAt: '2023-04-12 13:14:11'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: hgermi1@its.jnj.com
+        createdAt: '2023-04-12 12:49:35'
+        modifiedAt: '2023-04-12 12:49:35'
+  datasets/DS_JDE_01_F43121:
+    name: DS_JDE_01_F43121
+    description: ''
+    author: hgermi1@its.jnj.com
+    createdAt: '2023-04-12 12:51:34'
+    modifiedAt: '2023-04-12 12:51:34'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: hgermi1@its.jnj.com
+        createdAt: '2023-04-12 12:51:34'
+        modifiedAt: '2023-04-12 12:51:34'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
