--- a/src/datasets/MD_MATL/pbt_aspects.yml
+++ b/src/datasets/MD_MATL/pbt_aspects.yml
@@ -485,14 +485,35 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: MATL_SPEC_NUM
+  - name: MMS_SURGERY_TYPE_CD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: MATL_SPEC_VERS_NUM
+  - name: MMS_MATL_TYPE_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MMS_FIN_CLSN_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MMS_TEMP_SENS_IND
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MMS_STERILIZATION_IND
     type: string
     nullable: true
     metadata:
