--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -703,11 +703,28 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-14 12:21:22'
-    modifiedAt: '2023-04-14 12:27:13'
+    modifiedAt: '2023-04-14 12:27:55'
     datasets:
       inputs:
       - datasets/DS_SAP_MAKT_01
       - datasets/DS_SAP_MARA_01
+      outputs:
+      - datasets/MD_MATL
+    subgraphs: []
+    dependencies: {}
+  pipelines/SAP_MD_MATL_HCS:
+    name: SAP_MD_MATL_HCS
+    description: MD Material for SAP systems with matching L0 schema and mapping
+    author: natkins7@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-14 12:30:25'
+    modifiedAt: '2023-04-14 12:41:21'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_MAKT_01
+      - datasets/DS_SAP_MARA_HCS
       outputs:
       - datasets/MD_MATL
     subgraphs: []
@@ -1858,7 +1875,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-14 12:24:13'
+    modifiedAt: '2023-04-14 12:40:30'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -4178,6 +4195,21 @@ datasets:
         author: natkins7@its.jnj.com
         createdAt: '2023-04-14 09:33:32'
         modifiedAt: '2023-04-14 09:33:32'
+  datasets/DS_SAP_MARA_HCS:
+    name: DS_SAP_MARA_HCS
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-04-14 12:32:14'
+    modifiedAt: '2023-04-14 12:32:14'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-04-14 12:32:14'
+        modifiedAt: '2023-04-14 12:32:14'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
