--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -627,7 +627,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-11 14:37:19'
-    modifiedAt: '2023-04-12 15:39:30'
+    modifiedAt: '2023-04-14 11:11:42'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F4211
@@ -8426,6 +8426,31 @@ jobs:
     createdAt: '2023-03-22 13:05:15'
     modifiedAt: '2023-03-22 13:06:35'
     author: skostadi@its.jnj.com
+  jobs/JOB_MD_DELV_LINE_HM2:
+    name: JOB_MD_DELV_LINE_HM2
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SAP_MD_DELV_LINE_HM2
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-04-14 14:59:50'
+    modifiedAt: '2023-04-14 15:00:18'
+    author: jcovezd1@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
